Fixed css when names are too long in sidebar. Fixed model save/load order. Fixed js error when the graph is loading.

--- a/themes/base.css
+++ b/themes/base.css
@@ -31,6 +31,9 @@ html /deep/ paper-button {
 html /deep/ .search-result, html /deep/ .search-not-found {
     color: #aaa;
     padding: 10px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 html /deep/ .search-result {
     cursor: pointer;
